@@ -1,0 +1,13 @@
+#include "CREPanel.h"
+
+CREPanel::CREPanel()
+{
+}
+
+CREPanel::~CREPanel()
+{
+}
+
+void CREPanel::commitData()
+{
+}
